# air-marshall

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/agents/: architect.md  flutter-dev.md  gatekeeper.md  python-dev.md  qa-engineer.md  researcher.md  tech-writer.md
.claude/commands/am/: architecture-review.md  dartdoc-accuracy.md  dartdoc-improve.md  docs-improve.md  precommit.md  pydocs-accuracy.md  pydocs-improve.md  research.md  review.md  tests-coverage.md  tests-integration.md  tests-mocks.md  tests-run.md
.github/workflows/: conventional-pr-check.yml  integration-tests-dart.yml  integration-tests-python.yml  lint-dart.yml  lint-markdown.yml  lint-python.yml  unit-tests-dart.yml  unit-tests-python.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/cecropiacapital/air_marshall/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: client.dart  models.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/test/src/: client_integration_test.dart  client_test.dart  models_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
docs/: database.md  publisher.md
src/air_marshall/: __init__.py
src/air_marshall/api/: __init__.py  client.py  models.py
src/air_marshall/database/: __init__.py  __main__.py  app.py  auth.py  config.py  db.py  routes.py
src/air_marshall/hvac_controller/: __init__.py
src/air_marshall/monitor/: __init__.py  __main__.py  fan.py  humidity.py  publisher.py  weather.py
tests/api/: test_client.py  test_models.py
tests/database/: conftest.py  test___main__.py  test_app.py  test_app_integration.py  test_auth.py  test_config.py  test_db.py  test_routes.py
tests/hvac_controller/: test_placeholder.py
tests/monitor/: test___main__.py  test_fan.py  test_fan_hardware.py  test_humidity.py  test_humidity_hardware.py  test_placeholder.py  test_publisher.py  test_publisher_integration.py  test_weather.py
tests/shared/: test_placeholder.py
